--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=user_onboarding
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/temporal
+spring.datasource.username=postgres
+spring.datasource.password=karthik10
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
