--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.application.name=user_onboarding
+spring.application.name=user-onboarding
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/temporal
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/temporal-sample
 spring.datasource.username=postgres
-spring.datasource.password=karthik10
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
