modified client code, email verification flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=user-onboarding
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/temporal-sample
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_onboard
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=password2345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
