--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/user_onboard
+spring.datasource.url=jdbc:postgresql://localhost:5432/temporal-sample
 spring.datasource.username=postgres
-spring.datasource.password=password2345
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
